@@ -27,8 +27,8 @@
   (use sxml.tools)
   (use sxml.adaptor)
   (use file.util)
-  (use kahua.gsid)
   (use kahua.partcont)
+  (use kahua.gsid)
   (use kahua.session)
   (use kahua.persistence)
   (use kahua.user)
@@ -225,7 +225,7 @@
 		   (raise-with-db-error e)
 		   (guard (e2 (else (render-proc (kahua-default-error-proc e) context)))
 		     (render-proc ((or error-proc kahua-default-error-proc) e) context))))
-	  (render-proc (reset/pc (handler))
+	  (render-proc (reset (handler))
 		       (if permanent?
 			   context
 			   (add-extra-header context "x-robots-tag" "noindex"))))))
